new file:   FML Final project.docx 	new file:   FML Final project.pdf 	modified:   FML final project.ipynb

--- a/FML final project.ipynb
+++ b/FML final project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "872fb6c9",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "dd35c237",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        "4    0.323  Electronic  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "191fef01",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "2726c26a",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "bf8e90de",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "2d624e9f",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "e2a6f3df",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "6d7e0f5b",
    "metadata": {},
    "outputs": [],
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "3822416a",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "36ea56ae",
    "metadata": {},
    "outputs": [],
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "9a69f99d",
    "metadata": {
     "scrolled": true
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "34aa8474",
    "metadata": {},
    "outputs": [
@@ -829,7 +829,7 @@
        "9  Electronic           0           1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "a07ce3b2",
    "metadata": {},
    "outputs": [
@@ -1303,7 +1303,7 @@
        "9      0       0      0      0       0      0       0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,10 +1331,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "afc86272",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alternative' 'Anime' 'Blues' 'Classical' 'Country' 'Electronic'\n",
+      " 'Hip-Hop' 'Jazz' 'Rap' 'Rock']\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1785,7 +1793,7 @@
        "9      0       0      0      0       0      0       0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1795,8 +1803,9 @@
     "label_encoder = LabelEncoder()\n",
     "\n",
     "# Fit and transform the 'music_genre' column\n",
-    "data1['music_genre'] = label_encoder.fit_transform(data1['music_genre'])\n",
-    "\n",
+    "enc = LabelEncoder().fit(data1['music_genre'])\n",
+    "data1['music_genre'] = enc.transform(data1['music_genre'])\n",
+    "print(enc.inverse_transform([0,1,2,3,4,5,6,7,8,9]))\n",
     "# Display the DataFrame with the replaced 'music_genre' column\n",
     "data1.head(10)"
    ]
@@ -1811,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "8086a0a8",
    "metadata": {
     "scrolled": true
@@ -2267,7 +2276,7 @@
        "9      0       0      0      0       0      0       0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2290,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "7e399ef3",
    "metadata": {},
    "outputs": [
